fix targeted blur canvas alignment by adding back relative positioning to the parent element + prevent targeted blur crashing with right-mouse click

--- a/src/app.css
+++ b/src/app.css
@@ -115,3 +115,8 @@
 #togglePenPressureColor{
     border: 1px solid rgb(0, 255, 0);
 }
+
+#imageEditorCanvasContainer{
+  overflow: auto;
+  position: relative;
+}
